--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -23,6 +23,7 @@
     "express": "^5.1.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.10.1",
     "uuid": "^11.1.0",
     "winston": "^3.17.0"
   },
